改回不用模块化的方式，在mvn插件中使用插件参数使得可在jdk17中运行